--- a/.env
+++ b/.env
@@ -31,3 +31,8 @@ APP_SECRET=1e5589e4af5e2237f548fc7464adbb77
 # IMPORTANT: You MUST configure your db driver and server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
