--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.4.*",
         "twbs/bootstrap": "^4.3",
-        "twig/twig": "^3.0"
+        "twig/extensions": "^1.5",
+        "twig/twig" : "^2.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
