connexion/déconnexion dans la nav

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,6 +2,9 @@ security:
   encoders:
     App\Entity\User:
       algorithm: auto
+  role_hierarchy:
+    ROLE_ADMIN: ROLE_USER
+    ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
   # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
   providers:
