--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,7 +3,8 @@ security:
     App\Entity\User:
       algorithm: auto
   role_hierarchy:
-    ROLE_ADMIN: ROLE_USER
+    ROLE_SUBSCRIBER: ROLE_USER
+    ROLE_ADMIN: ROLE_SUBSCRIBER
     ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
   # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
@@ -35,6 +36,7 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    - { path: ^/admin, roles: ROLE_ADMIN }
-    - { path: ^/profile, roles: ROLE_SUBSCRIBER }
-    - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY}
+    - { path: ^/program, roles: ROLE_SUBSCRIBER}
+#    - { path: ^/admin, roles: ROLE_ADMIN }
+#    - { path: ^/profile, roles: ROLE_SUBSCRIBER }
+#    - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY}
