--- a/config/packages/twig_extensions.yaml
+++ b/config/packages/twig_extensions.yaml
@@ -4,6 +4,11 @@ services:
         autowire: true
         autoconfigure: true
 
+    dzango.twig.truncate_extension:
+        class: Dzango\Twig\Extension\Truncate
+        tags:
+            - { name: twig.extension }
+
     # Uncomment any lines below to activate that Twig extension
     #Twig\Extensions\ArrayExtension: null
     #Twig\Extensions\DateExtension: null
