--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "dzango/twig-truncate-extension": "^1.1",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
@@ -30,7 +31,7 @@
         "symfony/yaml": "4.4.*",
         "twbs/bootstrap": "^4.3",
         "twig/extensions": "^1.5",
-        "twig/twig" : "^2.0"
+        "twig/twig": "^2.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
